Closed Bug 216479 Opened 22 years ago Closed 17 years ago

when opening drafts and templates for editing, we don't use the saved "return receipts" and "attach vcard" info

Categories

(MailNews Core :: Composition, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9beta3

People

(Reporter: sspitzer, Assigned: mkmelin)

References

(Blocks 1 open bug)

Details

(Keywords: dataloss)

Attachments

(1 file)

when saving drafts and templates, we don't save the "return receipts" and "attach vcard" info. 1) edit a message, and use the Options menu to change the return receipt or attach vcard defauts. 2) save as draft (or template) 3) close the compose window 4) open the draft or template. actual results: the options have reverted to the default for the identity expect results: the options I set (manually) should persist note, the vcard part of this depends on bug #159068
*** Bug 224903 has been marked as a duplicate of this bug. ***
[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.7) Gecko/20040514] (<-- 1.7rc2 !) (W98SE) Some details on the RR case: There is some kind of saving: (at step 2) {{ X-Mozilla-Draft-Info: internal/draft; vcard=0; receipt=1; uuencode=0 }} But after saving it again (would be step 5), it has been lost: {{ X-Mozilla-Draft-Info: internal/draft; vcard=0; receipt=0; uuencode=0 }} This is not a UI issue, like the menu not initializing. (different kind of issue than in bug 146075 about priority) Still, workaround is to select the RR again.
Depends on: 14373
No longer depends on: 159068
Keywords: dataloss
Product: MailNews → Core
The 'Return Receipt' part is in the list of issues in bug 169171; the 'VCard' part is reported here only; otherwise, these two bugs are "dupes" of each other.
Depends on: 169171
No longer depends on: 169171
Depends on: 83412
Blocks: MDN
Keywords: 4xp
This bug may be made even worse by Thunderbird's "Autosave every x minutes" feature. --> automatic dataloss.
Flags: blocking-thunderbird2?
looks like we didn't get traction on this.
Flags: blocking-thunderbird2? → blocking-thunderbird2-
sorry for the spam. making bugzilla reflect reality as I'm not working on these bugs. filter on FOOBARCHEESE to remove these in bulk.
Assignee: sspitzer → nobody
OS: Windows 2000 → All
QA Contact: esther → composition
Hardware: PC → All
Attached patch proposed fixSplinter Review
Everything else is in place, it's just that the parsed values were always overridden by the identity prefs. With this patch drafts and templates disregard any vcard/mdn/dsn settings for the identity and use the settings they were saved with.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #295016 - Flags: superreview?(bienvenu)
Attachment #295016 - Flags: review?(bienvenu)
Updating summary to what really was going on.
Summary: when saving drafts and templates, we don't save the "return receipts" and "attach vcard" info → when opening drafts and templates for editing, we don't use the saved "return receipts" and "attach vcard" info
Comment on attachment 295016 [details] [diff] [review] proposed fix thx, Magnus, makes sense.
Attachment #295016 - Flags: superreview?(bienvenu)
Attachment #295016 - Flags: superreview+
Attachment #295016 - Flags: review?(bienvenu)
Attachment #295016 - Flags: review+
Checking in mailnews/compose/src/nsMsgCompose.cpp; /cvsroot/mozilla/mailnews/compose/src/nsMsgCompose.cpp,v <-- nsMsgCompose.cpp new revision: 1.539; previous revision: 1.538 done ->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
V.Fixed between these two nightlies: [Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9b3pre) Gecko/2008010302 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4) [Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9b3pre) Gecko/2008010403 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4) Tested with a draft having [ X-Mozilla-Draft-Info: internal/draft; vcard=1; receipt=1; DSN=0; uuencode=0 ]
Status: RESOLVED → VERIFIED
No longer depends on: 83412
Depends on: 411646
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: