Bug 216479: when opening drafts and templates for editing, we don't use the saved "return receipts" and "attach vcard" info r+sr=bienvenu